# project_lib

./: .gitignore  README.md  pyproject.toml
src/project_lib/: __init__.py  timeseries.py
src/project_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/project_lib/analysis/: __init__.py  normality.py  selector.py  transformations.py  visualization.py
src/project_lib/detectors/: __init__.py  base.py  chauvenet.py  dixon.py  grubbs.py  hampel.py  iqr.py  modified_zscore.py  monte_carlo.py  zscore.py
test/: test_timeseries.py
