[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detector-lib"
version = "0.1.4"
description = "Статистическое обнаружение выбросов и аномалий во временных рядах"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Daria Borzenkova" }]
keywords = ["anomaly detection", "outliers", "time series", "statistics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
